# koicore

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README_cn.md  language-configuration.json  package.json
.github/workflows/: crate-publish.yaml  rust-clippy.yaml  rust.yaml
benches/: parse_example.rs
crates/koicli/: Cargo.toml
crates/koicli/src/: main.rs
crates/koicore_ffi/: CMakeLists.txt  Cargo.toml  README.md  build.rs  koicore.h  test.c
crates/koicore_ffi/cmake/: KoicoreFFIConfig.cmake.in
crates/koicore_ffi/src/: command.rs  lib.rs
crates/koicore_ffi/src/command/: command.rs  dict.rs  list.rs  mod.rs  param.rs  single.rs
crates/koicore_ffi/src/parser/: config.rs  error.rs  input.rs  mod.rs
crates/koicore_ffi/src/writer/: config.rs  mod.rs  output.rs
crates/koicore_ffi/tests/cmake_integration/: CMakeLists.txt  README.md  main.c
crates/koicore_ffi/tests/cxx_api/: CMakeLists.txt  test_command.cpp  test_composite_dict.cpp  test_composite_list.cpp  test_input_source.cpp  test_parser.cpp  test_parser_error.cpp  test_writer.cpp
crates/koicore_py/: Cargo.toml  test.py
crates/koicore_py/src/: lib.rs
examples/: decode_buf_reader_example.rs
examples/basic_usage/: command_threshold.rs  simple_parser.rs  text_vs_annotation.rs
examples/input_sources/: bufread_wrapper.rs  file_input.rs  string_input.rs
examples/ktxt/: example0_gbk.ktxt  example0_shift_jis.ktxt  example0_utf16.ktxt  example1.koi0  example1.ktxt
koicore_ffi/: Cargo.toml
koilang-vscode-extension/: CHANGELOG.md  DEVELOPMENT.md  README.md  build.sh  example.koi  language-configuration.json  package.json  test.koi
koilang-vscode-extension/syntaxes/: koilang.json
scripts/: ffi-test.sh  py-test.sh
src/: command.rs  lib.rs
src/parser/: command.rs  command_parser.rs  decode_buf_reader.rs  error.rs  input.rs  mod.rs  traceback.rs
src/writer/: config.rs  formatters.rs  generators.rs  mod.rs
syntaxes/: koilang.json
tests/: test_decode_buf_reader.rs  test_encoding.rs  test_error_handling.rs  test_nom.rs  test_parser.rs  test_serde.rs  test_verify_boolean.rs  test_writer.rs  verify_boolean.rs
