[package]
name = "koicore"
description = "core KoiLang module"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Ovizro <ovizro@visecy.org>"]
repository = "https://github.com/Visecy/koicore"
keywords = ["KoiLang", "parser", "markup-language"]

[[example]]
name = "decode_buf_reader_example"
path = "examples/decode_buf_reader_example.rs"

[dependencies]
nom = "8.0"
encoding_rs = "0.8"

[dev-dependencies]
criterion = "0.3"

[workspace]
members = ["crates/*"]

[[bench]]
name = "parse_example"
harness = false
