[package]
name = "koicore"
description = "core KoiLang module"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ovizro <ovizro@visecy.org>"]
repository = "https://github.com/Visecy/koicore"
keywords = ["KoiLang", "parser", "markup-language"]

[[example]]
name = "decode_buf_reader"
path = "examples/advanced/decode_buf_reader.rs"

[[example]]
name = "simple_parser"
path = "examples/basic_usage/simple_parser.rs"

[[example]]
name = "text_vs_annotation"
path = "examples/basic_usage/text_vs_annotation.rs"

[[example]]
name = "command_threshold"
path = "examples/basic_usage/command_threshold.rs"

[[example]]
name = "string_input"
path = "examples/input_sources/string_input.rs"

[[example]]
name = "file_input"
path = "examples/input_sources/file_input.rs"

[[example]]
name = "bufread_wrapper"
path = "examples/input_sources/bufread_wrapper.rs"

[dependencies]
nom = "8.0"
encoding_rs = "0.8"

[dev-dependencies]
criterion = "0.3"

[workspace]
members = ["crates/*"]

[[bench]]
name = "parse_example"
harness = false
