[package]
name = "koicli"
description = "Command-line interface for KoiLang"
version = "0.1.0"
edition = "2024"
authors = ["Ovizro <ovizro@visecy.org>"]
publish = false

[dependencies]
koicore = { path = "../..", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
